apps/shelfmark/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shelfmark
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: shelfmark.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shelfmark
                port:
                  number: 8084
